Add new buildings for player only

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -1,2 +1,12 @@
-Holodeck = Holodeck
-Breeders = Breeders
+Hunter Office = Hunter Office
+Food Industry Agency = Food Industry Agency
+Auction House = Auction House
+Financial Management Agency = Financial Management Agency
+Training Center = Training Center
+Secret Military Academy = Secret Military Academy
+Labor Office = Labor Office
+Future Power Plants = Future Power Plants
+Ancient Laboratory = Ancient Laboratory
+Mystic Laboratory = Mystic Laboratory
+Resort = Resort
+Cultural Office = Cultural Office
