--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -1,2 +1,12 @@
-Holodeck = 홀덱
-Breeders = 브리더
+Hunter Office = 수렵청
+Food Industry Agency = 식량산업청
+Auction House = 경매소
+Financial Management Agency = 금융관리청
+Training Center = 훈련소
+Secret Military Academy = 비밀사관학교
+Labor Office = 노동청
+Future Power Plants = 미래발전소
+Ancient Laboratory = 고대연구소
+Mystic Laboratory = 신화연구소
+Resort = 휴양소
+Cultural Office = 문화청
