--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -10,3 +10,5 @@ Ancient Laboratory = Ancient Laboratory
 Mystic Laboratory = Mystic Laboratory
 Resort = Resort
 Cultural Office = Cultural Office
+Special Fortress = Special Fortress
+Star Fort = Star Fort
