--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -10,3 +10,5 @@ Ancient Laboratory = 고대연구소
 Mystic Laboratory = 신화연구소
 Resort = 휴양소
 Cultural Office = 문화청
+Special Fortress = 특수 요새
+Star Fort = 성형 요새
