Add new buildings / tile improvement / promotions for player only

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -12,3 +12,5 @@ Resort = Resort
 Cultural Office = Cultural Office
 Special Fortress = Special Fortress
 Star Fort = Star Fort
+Sirius Outpost = Sirius Outpost
+Learner = Learner
