--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -14,3 +14,4 @@ Special Fortress = 특수 요새
 Star Fort = 성형 요새
 Sirius Outpost = Sirius 전초기지
 Learner = 학습가
+[relativeAmount]% Strength after if it kills a unit = 유닛 처치시마다 [relativeAmount]% 전투력
