Change ranged unique + Add maxCivilizationWorker option to 3 (Global worker number limit)

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -13,4 +13,5 @@ Cultural Office = Cultural Office
 Special Fortress = Special Fortress
 Star Fort = Star Fort
 Sirius Outpost = Sirius Outpost
+Increased Range = Increased Range
 Learner = Learner
